small fix on task list alignment

--- a/css/home.css
+++ b/css/home.css
@@ -95,7 +95,6 @@
     background-color: #00DD00;
     border: 0.5px solid rgba(70, 70, 70, 0.844);
     border-radius: 5px;
-    margin-left: 55px;
 }
 .cus_navbar .intro, 
 .cus_navbar .contact, 
